# nnstreamer

./: .clang-format  .cursorrules  .gitignore  .gitmodules  AGENTS.md  CHANGES  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  RELEASES.md  _typos.toml  index.md  meson.build  meson_options.txt  nnstreamer-internal.pc.in  nnstreamer-single-internal.pc.in  nnstreamer-single.pc.in  nnstreamer.ini  nnstreamer.ini.in  nnstreamer.pc.in
api/capi/: capi-ml-common.pc.in  capi-nnstreamer-single-new.pc.in  capi-nnstreamer.pc.in  meson.build  modify_nnstreamer_h_for_nontizen.sh
convert2tensor/: CMakeLists.txt  README.md  convert2tensor.c  convert2tensor.h
convert2tensor/test/: .gitignore  runTest.sh  testcase01.sh
ext/nnstreamer/: meson.build
gst/: meson.build
gst/datarepo/: datarepo_elements.c  gstdatarepo.c  gstdatarepo.h  gstdatareposink.c  gstdatareposink.h  gstdatareposrc.c  gstdatareposrc.h  meson.build
gst/edge/: edge_common.c  edge_common.h  edge_elements.c  edge_sink.c  edge_sink.h  edge_src.c  edge_src.h  meson.build
gst/join/: gstjoin.c  gstjoin.h  meson.build
gst/mqtt/: README.md  meson.build  mqttcommon.h  mqttelements.c  mqttsink.c  mqttsink.h  mqttsrc.c  mqttsrc.h  ntputil.c  ntputil.h
gst/nnstreamer/: README.md  hw_accel.c  hw_accel.h  meson.build  ml_agent.c  ml_agent.h  nnstreamer.c  nnstreamer_conf.c  nnstreamer_conf.h  nnstreamer_internal.h  nnstreamer_internal_single.h  nnstreamer_log.c  nnstreamer_log.h  nnstreamer_plugin_api.c  nnstreamer_plugin_api.h  nnstreamer_plugin_api_converter.h  nnstreamer_plugin_api_decoder.h  nnstreamer_plugin_api_filter.h  nnstreamer_plugin_api_impl.c  nnstreamer_plugin_api_sink.h  nnstreamer_plugin_api_util_impl.c  nnstreamer_profile.c  nnstreamer_profile.h  nnstreamer_subplugin.c  nnstreamer_subplugin.h  nnstreamer_watchdog.c  nnstreamer_watchdog.h  no_audio_define.h  tensor_allocator.c  tensor_common.c  tensor_common.h  tensor_common_pipeline.c  tensor_common_single.c  tensor_data.c  tensor_data.h  tensor_filter_custom.h  tensor_filter_custom_easy.h  tensor_meta.c  tensor_meta.h  tensor_repo.c  (+2 more)
gst/repo/: gstrepo_src.c  gstrepo_src.h  meson.build
gst/tensor_aggregator/: CMakeLists.txt  README.md  meson.build  tensor_aggregator.c  tensor_aggregator.h
gst/tensor_converter/: CMakeLists.txt  README.md  meson.build  tensor_converter.c  tensor_converter.h
gst/tensor_decoder/: CMakeLists.txt  meson.build  tensordec-boundingbox.c  tensordec-directvideo.c  tensordec-imagelabel.c  tensordec-plugins.c  tensordec.c  tensordec.h  tensordec_bounding_boxes_core.cc  tensordec_bounding_boxes_core.h
gst/tensor_demux/: CMakeLists.txt  gsttensordemux.c  gsttensordemux.h  meson.build
gst/tensor_filter/: CMakeLists.txt  README.md  meson.build  tensor_filter.c  tensor_filter.h  tensor_filter_custom.c  tensor_filter_tensorflow.c  tensor_filter_tensorflow_core.cc  tensor_filter_tensorflow_core.h  tensor_filter_tensorflow_lite.c  tensor_filter_tensorflow_lite_core.cc  tensor_filter_tensorflow_lite_core.h
gst/tensor_merge/: CMakeLists.txt  gsttensormerge.c  gsttensormerge.h  meson.build
gst/tensor_mux/: CMakeLists.txt  gsttensormux.c  gsttensormux.h  meson.build
gst/tensor_repopop/: CMakeLists.txt  tensor_repopop.c  tensor_repopop.h
gst/tensor_repopush/: CMakeLists.txt  meson.build  tensor_repopush.c  tensor_repopush.h
gst/tensor_reposink/: CMakeLists.txt  meson.build  tensor_reposink.c  tensor_reposink.h
gst/tensor_reposrc/: CMakeLists.txt  meson.build  tensor_reposrc.c  tensor_reposrc.h
gst/tensor_saveload/: CMakeLists.txt  meson.build  tensor_load.c  tensor_load.h
gst/tensor_sink/: CMakeLists.txt  meson.build  tensor_sink.c  tensor_sink.h
gst/tensor_split/: CMakeLists.txt  gsttensorsplit.c  gsttensorsplit.h  meson.build
gst/tensor_transform/: CMakeLists.txt  meson.build  tensor_transform.c  tensor_transform.h  transform-orc.orc
gst_example/: CMakeLists.txt
gst_example/tutorial1/: basic-tutorial-1.c
gst_example/tutorial2/: basic-tutorial-2-add-filter.c  basic-tutorial-2.c
gst_example/tutorial3/: basic-tutorial-3-exercise.c  basic-tutorial-3.c
gst_example/tutorial6/: basic-tutorial-6.c
gst_example/tutorial7/: basic-tutorial-7.c
gst_example/tutorial8/: basic-tutorial-8.c
nnstreamer_example/: CMakeLists.txt  meson.build
nnstreamer_example/custom_example_LSTM/: CMakeLists.txt  dummy_LSTM.c  meson.build
nnstreamer_example/custom_example_RNN/: CMakeLists.txt  dummy_RNN.c  meson.build
nnstreamer_example/custom_example_average/: CMakeLists.txt  meson.build  nnstreamer_customfilter_example_average.c
nnstreamer_example/custom_example_drop_buffer/: meson.build
nnstreamer_example/custom_example_framecounter/: meson.build  nnscustom_framecounter.c
nnstreamer_example/custom_example_opencv/: CMakeLists.txt  meson.build  nnstreamer_customfilter_opencv_average.cc  nnstreamer_customfilter_opencv_scaler.cc
nnstreamer_example/custom_example_passthrough/: CMakeLists.txt  meson.build  nnstreamer_customfilter_example_passthrough.c  nnstreamer_customfilter_example_passthrough_variable.c
nnstreamer_example/custom_example_scaler/: CMakeLists.txt  meson.build  nnstreamer_customfilter_example_scaler.c  nnstreamer_customfilter_example_scaler_allocator.c
nnstreamer_example/custom_example_tensorrt/: meson.build  nnstreamer_customfilter_example_tensorrt_reshape.cc
nnstreamer_example/example_cam/: CMakeLists.txt  meson.build  nnstreamer_example_cam.c
nnstreamer_example/example_decoder_image_labelling/: CMakeLists.txt  meson.build  (+1 more)
tensor_converter/: CMakeLists.txt  tensor_converter.c  tensor_converter.h
tensor_filter/: CMakeLists.txt  README.md  tensor_filter.c  tensor_filter.h  tensor_filter_custom.c  tensor_filter_custom.h  tensor_filter_tensorflow_lite.c
tests/: CMakeLists.txt  README.md  bmp2png.c  check_broker.sh  gen24bBMP.py  genPTSLog.py  get_available_port.py  meson.build  testAPI.sh  testAll.sh  test_utils.py  unittest_util.c  unittest_util.h  unittestcoverage.py
tizen-api/: LICENSE.Apache-2.0  capi-nnstreamer.pc.in  meson.build
(+1043 files in other folders)
